# orthanc-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  cobertura.xml  codecov.yml  docker-compose.yml  release.toml  rustfmt.toml
.github/workflows/: release.yml  test.yml
completion/: README.md  _orthanc  orthanc.bash  orthanc.fish
orthanc/: orthanc.json
scripts/: cleanup_orthanc.sh  populate_orthanc.sh  update-versions.sh
src/: cli.rs  constants.rs  lib.rs  main.rs  utils.rs
tests/: slow.rs  test.rs
tests/data/: all_help.stdout  anonymize_patient.stdout  anonymize_series.stdout  anonymize_study.stdout  help.stderr  help_instance.stderr  help_patient.stderr  help_series.stderr  help_study.stderr  instance_anonymization_config.yml  instance_list.stdout  instance_list_columns.stdout  instance_list_no_header.stdout  instance_modification_config.yml  instance_show.stdout  instance_tags.stdout  instances_search.stdout  instances_search_error.stderr  instances_search_no_header.stdout  json_parse_error.stderr  modality_delete_not_found_error.stderr  modality_list.stdout  modality_list_columns.stdout  modality_list_no_header.stdout  modality_not_found_error.stderr  modality_show.stdout  modality_show_1.6.stdout  modality_show_modified.stdout  modality_store.stdout  no_such_file_error.stderr  not_found_error.stderr  not_found_with_message_error.stderr  patient_anonymization_config.yml  patient_list.stdout  patient_list_columns.stdout  patient_list_no_header.stdout  patient_list_studies.stdout  patient_list_studies_no_header.stdout  patient_modification_config.yml  patient_show.stdout  (+33 more)
tests/data/unit/: list_instances  list_instances_columns  list_instances_columns_no_header  list_instances_no_header  list_patients  list_patients_columns  list_patients_columns_no_header  list_patients_no_header  list_series  list_series_no_header  list_studies  list_studies_no_header  show_instance  show_patient  show_series  show_study
