[package]
name = "orthanc-cli"
description = "Command-line interface for Orthanc, an open-source, lightweight DICOM server"
version = "0.0.1"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
edition = "2018"
repository = "https://github.com/Ch00k/orthanc-cli"
homepage = "https://github.com/Ch00k/orthanc-cli"
keywords = ["cli", "command-line", "orthanc", "dicom"]
categories = ["cli"]
readme = "README.md"
license = "Unlicense"
autotests = false

[dependencies]
clap = "3.0.0-beta.2"
comfy-table = "1.1"
orthanc = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
regex = "1.4"
zip = "0.5"

[[bin]]
name = "orthanc"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/test.rs"
