[package]
name = "orthanc-cli"
description = "Command-line interface for Orthanc, an open-source, lightweight DICOM server"
version = "0.4.0"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
edition = "2018"
repository = "https://github.com/Ch00k/orthanc-cli"
homepage = "https://github.com/Ch00k/orthanc-cli"
documentation = "https://github.com/Ch00k/orthanc-cli"
keywords = ["cli", "command-line", "orthanc", "dicom"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Unlicense"
autotests = false
build = "build.rs"

[dependencies]
clap = "3.0.0-beta.2"
comfy-table = "2.1"
orthanc = "0.8"
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
chrono = "0.4"
dicom-object = "0.3"
maplit = "1.0"
pretty_assertions = "0.7"
regex = "1.4"
tempfile = "3.2"
zip = "0.6"

# https://github.com/colin-kiegel/rust-pretty-assertions/issues/19#issuecomment-657672143
[profile.dev.package.diff]
opt-level = 3

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"

[[bin]]
name = "orthanc"
path = "src/main.rs"

[lib]
name = "orthanc_cli"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/test.rs"
